2002-09-24  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: add AC_PROG_MAKE_SET as advised by info page for using SUBDIR

2002-09-23  Junichi Uekawa  <dancer@debian.org>

	* debian/dsh.updatelist: update the machines list to use ${CLUSTERXML} format
	instead of using hard-coded cluster.xml location.

	* Makefile.am (TESTS): add it to the tests list.

	* tests/param-i.sh: new test to check whether the -i option works.

	* tests/param-cn4.sh: use ${bindir} variable, because full path of dsh changes

	* Makefile.am (TESTS_ENVIRONMENT): specify bindir=$(bindir) for use.

	* Makefile.am (SUBDIRS): remove tests from SUBDIRS
	(EXTRA_DIST): extra dist for tests is done with the main Makefile.am

	* configure.ac: remove tests/Makefile.

	* tests/param-cn4.sh: check the -cn4 option is working.
	* tests/Makefile.am (EXTRA_DIST): add 
	* Makefile.am (TESTS): add

	* tests/param-unknown.sh: add test for unknown param
	* Makefile.am (TESTS): add
	* tests/Makefile.am (EXTRA_DIST): add.

	* parameter.c (parse_options): handle unknown option parameter properly.
	(parse_options): abort on wrong option.

2002-09-22  Junichi Uekawa  <dancer@debian.org>

	* tests/Makefile.am (EXTRA_DIST): dist target
	* Makefile.am (TESTS): add to test target
	* tests/param-f-fail.sh: add new test to check failure to -f.

	* parameter.c (read_machinelist): fail on error to 
	open the file.
	(read_machinenetgroup): fail on error.
	exit(1) on failure.

	* Makefile.am (SUBDIRS): add support for tests.
	(check_PROGRAMS): add dsh to check_PROGRAMS as well

	* tests/list.file: file list to use with -f option.

	* tests/param-m.sh: test -m option.

	* tests/param-f.sh: test -f option.

	* configure.ac: add tests/Makefile

	* tests/Makefile.am (EXTRA_DIST): create testsuite.

	* configure.ac: 0.22.0
	some new features are being added. Bump up the version.
	start debugging those features :)

	* dsh.1: document that multiple specification of 
	same machine will not be valued, and be merged into one.
