@@ -11,7 +11,10 @@ TESTS=tests/param-f.sh \
 	tests/param-unknown.sh  \
 	tests/param-i.sh  \
 	tests/param-cn4.sh
-TESTS_ENVIRONMENT=bindir=$(bindir)
+TESTS_ENVIRONMENT=bindir=$(bindir) \
+	LC_ALL=C \
+	LANG=C
+
 EXTRA_DIST= config.rpath $(sysconf_DATA) autogen.sh \
 	$(TESTS) tests/list.file
 
